@startuml

' Definição das classes
class Curso {
    - nome: String
    - slug: String
}

class Disciplina {
    - nome: String
    - curso: Curso[]
}

class Vaga {
    - disciplina: Disciplina
    - unidade: String
}

class User {
    - nome: String
    - email: String
}
class Aluno {
    - user: User
    - matricula: String
    - curso: Curso

    + InscreverSe(vaga: Vaga): Inscricao
}

class Inscricao {
    - aluno: Aluno
    - vaga: Vaga
    - arquivo_historico: file
    - status: String
}

class Admin {
    - user: User

    + AprovarInscricao(inscricao: Inscricao): void
    + RejeitarInscricao(inscricao: Inscricao): void
}

User <|-down- Aluno
User <|-down- Admin
Aluno -[hidden]left- Admin

Aluno "0..*" --> "1" Curso : está matriculado em
Aluno "1" --> "0..*" Inscricao : realiza
Disciplina "1" -right-> "*" Curso : pertence a
Vaga "1" --> "1" Disciplina
Inscricao "*" --> "1" Vaga : é para
Inscricao "*" <-- "1" Admin : é aprovada por


@enduml
